# mit6.824-2023

./: .gitignore  CMakeLists.txt  Makefile  go.mod  go.sum  mrcooridnator  mrseq  mrworker  readme.md
libs/: CMakeLists.txt  dynamic.hpp  flags.cpp  flags.h  liblibs.dylib
mr/: CMakeLists.txt  coordinator.h  worker.h
mrapps/: CMakeLists.txt  libmrapps.dylib  wc.cpp
pydemo/: test.py
pydemo/mr/: master.py  readme.md  seqmr.py  test.sh  worker.py
pydemo/mr_with_crash/: function.py  globals.py  master.py  seqmr.py  worker.py
src/: mrcoordinator.cpp  mrsequential.cpp  mrworker.cpp
src/main/: exam.go  mrmaster.go  mrsequential.go  mrworker.go  rpctest.go  test-mr.sh  test_json.go
src/mr/: global.go  master.go  rpc.go  worker.go
src/mrapps/: crash.go  indexer.go  mtiming.go  nocrash.go  rtiming.go  wc.go
